syntax = "proto3";

package stats.messages;

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

message InteractionsCountRequestProto {
    repeated int64 event_id = 1;
}