syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";
import "stats/messages/user_action.proto";

option java_package = "ru.practicum.grpc.stats.collector";
option java_multiple_files = true;

service UserActionController {
    rpc CollectUserAction (stats.messages.UserActionProto)
            returns (google.protobuf.Empty);
}